<resources>
    <string name="app_name">CP100 Smoke</string>
    <string name="scanButtonText">Scan</string>
    <string name="available_devices_text">Available Devices</string>
    <string name="paired_device_text">Paired Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leak_test_passed">LEAK TEST PASSED</string>
    <string name="company_name">IMPAVIDO</string>
    <string name="percentage_sign">%</string>
    <string name="range">Range :</string>
    <string name="_0000">0000</string>
</resources>