<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SmokeMeterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- First Horizontal Layout , time date companyName-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:text="Time : " />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/paleYellow"
                android:text="00:00" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:text="Date : " />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/paleYellow"
                android:text="00/00/00" />

<!--            <TextView-->
<!--                android:id="@+id/companyName"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text=""-->
<!--                android:textAlignment="viewEnd"-->
<!--                android:textColor="@color/paleYellow" />-->

        </LinearLayout>


        <!-- Second Horizontal layout for HSU values-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="55dp"
                android:padding="10dp"
                android:text="HSU : "
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hsu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/paleBlue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:text="@string/range" />

            <TextView
                android:id="@+id/hsu_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@color/paleBlue"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/paleYellow"
                android:text="@string/percentage_sign" />

        </LinearLayout>

        <!-- Third Horizontal layout for K values-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="55dp"
                android:padding="10dp"
                android:text="K : "
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/k_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/paleBlue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:text="@string/range" />

            <TextView
                android:id="@+id/k_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@color/paleBlue"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/paleYellow"
                android:text="@string/percentage_sign" />

        </LinearLayout>

        <!-- Fourth Horizontal layout for OIL TEMP values-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="55dp"
                android:padding="10dp"
                android:text="Oil Temp : "
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/oil_temp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/paleBlue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:text="@string/range" />

            <TextView
                android:id="@+id/oil_temp_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@color/paleBlue"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/paleYellow"
                android:text="@string/percentage_sign" />

        </LinearLayout>

        <!-- Fifth Horizontal layout for RPM values-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="55dp"
                android:padding="10dp"
                android:text="K : "
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rpm_smoke_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/paleBlue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:text="@string/range" />

            <TextView
                android:id="@+id/rpm_smoke_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@color/paleBlue"
                android:text="@string/_0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/paleYellow"
                android:text="@string/percentage_sign" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date_time_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF9800"
                android:padding="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="Flush"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/centername_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="1"
                android:background="@color/lightGreen"
                android:text="MEASURE" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>